--- a/schoolnotes/cvars/settings.sty
+++ b/schoolnotes/cvars/settings.sty
@@ -7,6 +7,7 @@
 \usepackage{amsfonts}
 \usepackage{mathrsfs}
 \usepackage{mathtools}
+\usepackage{esdiff}
 \usepackage{IEEEtrantools}
 \usepackage{geometry}
 \usepackage{hyperref}
@@ -24,6 +25,7 @@
 
 \newcommand{\overbar}[1]{\mkern 1.0mu\overline{\mkern-1.0mu#1\mkern-1.0mu}\mkern 1.0mu}
 \newcommand{\Mod}[1]{(\mathrm{mod}\ #1)}
+\newcommand*\Eval[3]{\left.#1\right\rvert_{#2}^{#3}}
 \DeclarePairedDelimiter\abs{\lvert}{\rvert}
 \DeclarePairedDelimiter\norm{\lVert}{\rVert}
 \makeatletter
@@ -32,9 +34,6 @@
 \let\oldnorm\norm
 \def\norm{\@ifstar{\oldnorm}{\oldnorm*}}
 \makeatother
-% remove IEEEproof indent
-\usepackage{etoolbox}
-\patchcmd{\IEEEproofindentspace}{2\parindent}{0pt}{}{}
 
 \theoremstyle{plain}
 \newtheorem{theorem}{Theorem}[section]
