--- a/schoolnotes/return/return.tex
+++ b/schoolnotes/return/return.tex
@@ -1,3 +1,7 @@
+\documentclass{article}
+\usepackage[left=3cm,right=3cm,top=2cm,bottom=2cm]{geometry}
+\setlength{\parindent}{0mm}
+
 \usepackage[utf8]{inputenc}
 \usepackage[english]{babel}
 \usepackage{enumitem}
@@ -56,3 +60,15 @@
 \newtheorem{exer}[theorem]{Exercise}
 \newtheorem{convention}[theorem]{Convention}
 \newtheorem{assumption}[theorem]{Assumption}
+
+\begin{document}
+
+\title{Topics to revisit}
+\author{Samuel Lindskog}
+\maketitle
+
+\section*{Linear algebra}
+\subsection{Canonical base}
+In "The Laplacian in polar and spherical coordinates", canonical base is referred to in the beginning of the document.
+\subsection{}
+\end{document}
