--- a/schoolnotes/hw/rahw5/rahw5.tex
+++ b/schoolnotes/hw/rahw5/rahw5.tex
@@ -112,7 +112,7 @@ Section 5.1: Exercise 5.1.1
 Section 5.3: Exercise 5.2.1
 \smallbreak
 \begin{IEEEproof}
-	Suppose \((a_n)_{n=0}^{\infty}\) is Cauchy, and \((b_n)_{n=1}^{\infty}\) is an equivalent sequence. It follows that
+	Suppose \((a_n)_{n=1}^{\infty}\) is Cauchy, and \((b_n)_{n=1}^{\infty}\) is an equivalent sequence. It follows that
 	\begin{equation*}
 		\forall\epsilon\in\mathbb{Q}^{+},\,\exists N\in\mathbb{N},\,\big(n\geq N\Rightarrow\abs{a_n-b_n}<\epsilon\big)
 	\end{equation*}
@@ -133,8 +133,8 @@ Section 5.3: Exercise 5.3.2
 \begin{IEEEproof}
 	First we prove the product of two reals is real. Let \((a_n)_{n=1}^{\infty}\) and \((b_n)_{n=1}^{\infty}\) be Cauchy sequences. Then (also utilizing the reverse triangle inequality) we can choose \(N,M\in\mathbb{Q}\) such that
 	\begin{IEEEeqnarray}{l}
-		i,j>N\Rightarrow\abs{a_i-a_j}<1,\Rightarrow a_j<1+a_i\label{eqn1}\\
-		i,j>M\Rightarrow\abs{b_i-b_j}<1,\Rightarrow b_j<1+b_i\label{eqn2}
+		i,j>N\Rightarrow\abs{a_i-a_j}<1,\Rightarrow \abs{a_j}<1+\abs{a_i}\label{eqn1}\\
+		i,j>M\Rightarrow\abs{b_i-b_j}<1,\Rightarrow \abs{a_j}<1+\abs{b_i}\label{eqn2}
 	\end{IEEEeqnarray}
 	Then for \(\delta\in\mathbb{Q}\) choose \(L,O\in\mathbb{N}\) such that
 	\begin{IEEEeqnarray*}{l}
@@ -177,7 +177,7 @@ Section 5.3: Exercise 5.3.2
 	\end{IEEEeqnarray*}
 	Therefore if \(C=\text{max}\{N,M\}\) then \(i>C\) implies \(\abs{b_i}<1+\abs{b_k}\). It then follows from the above implication that
 	\begin{IEEEeqnarray*}{rCl}
-		i>C\Rightarrow\abs{a_ib_i-a'_ib_k}&<&\frac{(1+\abs{b_k})\epsilon}{1+\abs{b_k}}\\
+		i>C\Rightarrow\abs{a_ib_i-a'_ib_i}&<&\frac{(1+\abs{b_k})\epsilon}{1+\abs{b_k}}\\
 		&=&\epsilon
 	\end{IEEEeqnarray*}
 	Thus \(xy\) and \(x'y\) are equivalent.
@@ -216,11 +216,5 @@ Show that for all \(x,y,z\in\mathbb{R}\):
 		\begin{IEEEproof}
 			Let \((a_n)_{n=1}^{\infty},\,(b_n)_{n=1}^{\infty},\,(c_n)_{n=1}^{\infty}\) be a Cauchy sequences. It follows from the distributive property of rational multiplication that for any rational numbers \(x,y,z\) we have \((x+y)z=xz+yz\). Thus \((\text{LIM}_{n\rightarrow\infty}a_n+\text{LIM}_{n\rightarrow\infty}b_n)\cdot\text{LIM}_{n\rightarrow\infty}c_n=\text{LIM}_{n\rightarrow\infty}(a_n+b_n)\cdot\text{LIM}_{n\rightarrow\infty}c_n=\text{LIM}_{n\rightarrow\infty}(a_n+b_n)c_n=\text{LIM}_{n\rightarrow\infty}(a_nc_n+b_nc_n)=\text{LIM}_{n\rightarrow\infty}a_nc_n+\text{LIM}_{n\rightarrow\infty}b_nc_n\).
 		\end{IEEEproof}
-	\item If \(x<y\) then \(x+z<y+z\).
-		\begin{IEEEproof}
-			Let \((a_n)_{n=1}^{\infty},\,(b_n)_{n=1}^{\infty},\,(c_n)_{n=1}^{\infty}\) be a Cauchy sequences. It follows from the properties of order of the rationals that for any rational numbers \(x,y,z\) we have \(x<y\rightarrow x+z<y+z\). Thus \((\text{LIM}_{n\rightarrow\infty}a_n+\text{LIM}_{n\rightarrow\infty}b_n)\cdot\text{LIM}_{n\rightarrow\infty}c_n=\text{LIM}_{n\rightarrow\infty}(a_n+b_n)\cdot\text{LIM}_{n\rightarrow\infty}c_n=\text{LIM}_{n\rightarrow\infty}(a_n+b_n)c_n=\text{LIM}_{n\rightarrow\infty}(a_nc_n+b_nc_n)=\text{LIM}_{n\rightarrow\infty}a_nc_n+\text{LIM}_{n\rightarrow\infty}b_nc_n\).
-		\end{IEEEproof}
 \end{enumerate}
-\subsection*{Bonus 5.4.4}
-\subsection*{Bonus 5.4.3}
 \end{document}
